--- a/_template/index.html
+++ b/_template/index.html
@@ -3,9 +3,19 @@
     <head>
         <title>PAGE_TITLE</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <script type="text/javascript" src="../../lib/jQuery/jquery-3.3.1.min.js"></script>
+
+        <!-- remember to run `npm install paper` to install paper JS if you need this -->
+        <!-- 
+            <script type="text/javascript" src="./node_modules/paper/dist/paper-full.min.js"></script>
+            <script type="text/paperscript" canvas="myCanvas"></script> 
+        -->
     </head>
 
     <body>
         <script src="script.js" type="text/javascript"></script>
+
+        <!-- include this if you are going to do graphics with paper JS -->
+        <!-- <canvas id="myCanvas" resize></canvas> -->
     </body>
 </html>
